--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.47"
+    "axios": "^1.4.0",
+    "firebase": "^9.21.0",
+    "luxon": "^3.3.0",
+    "vue": "^3.2.47",
+    "vue-plyr": "^7.0.0",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
